# MCP-Detector

./: README.md  debug_import.py
dummy_repo/: requirements.txt  server.py
repo_scanner/: README.md  debug_imports.py  debug_out.txt  pyproject.toml  requirements.txt  run_scanner.py  trace.txt
repo_scanner/cli/: main.py
repo_scanner/config/: languages.yaml  scanner_config.yaml
repo_scanner/results/: .._dummy_repo_2026-02-01T18-45-33.json  Saroj-Shandiliya_Business_Email_Compromise_Detector_2026-02-01T18-48-11.json  Saroj-Shandiliya_Business_Email_Compromise_Detector_2026-02-01T18-49-39.json  Saroj-Shandiliya_Data-Structures-and-Algorithm_2026-02-01T18-46-24.json  Saroj-Shandiliya_Data-Structures-and-Algorithm_2026-02-01T18-52-11.json  Saroj-Shandiliya_MCP-Scanner_2026-02-01T18-49-23.json
repo_scanner/scanner/: __init__.py  classifier.py  file_filter.py  repo_fetcher.py  scorer.py
repo_scanner/scanner/scanners/: ast_scanner.py  dependency_scanner.py  keyword_scanner.py
repo_scanner/src/github_repo_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repo_scanner/src/repo_scanner/cli/: main.py
repo_scanner/src/repo_scanner/config/: languages.yaml  scanner_config.yaml
repo_scanner/src/repo_scanner/scanner/: __init__.py  classifier.py  file_filter.py  github_client.py  repo_fetcher.py  result.py  scorer.py  utils.py
repo_scanner/src/repo_scanner/scanner/scanners/: ast_scanner.py  base.py  dependency_scanner.py  keyword_scanner.py
tests/: verify.py
